@@ -1,0 +1,49 @@
+<?xml version="1.0"?>
+
+<project name="test" basedir="." default="invalid">
+
+  <target name="invalid">
+    <fail>This file should only be run via a testcase</fail>
+  </target>
+
+  <target name="empty">
+    <typedef />
+  </target>
+
+  <target name="noClassname">
+    <typedef name="dummy" />
+  </target>
+
+  <target name="noName">
+    <typedef classname="org.example.types.TypedefTestType">
+      <classpath refid="testclasses" />
+    </typedef>
+  </target>
+
+  <target name="classNotFound">
+    <typedef name="" classname="oops"/>
+  </target>
+
+  <path id="testclasses">
+    <pathelement location="../../../../build/testcases" />
+    <pathelement path="${java.class.path}" />
+  </path>
+
+  <typedef name="global"
+           classname="org.example.types.TypedefTestType">
+    <classpath refid="testclasses" />
+  </typedef>
+
+  <target name="testGlobal">
+    <global id="global" />
+  </target>
+
+  <target name="testLocal">
+    <typedef name="local"
+             classname="org.example.types.TypedefTestType">
+      <classpath refid="testclasses" />
+    </typedef>
+    <local id="local" />
+  </target>
+
+</project>
